--- a/E-commerce-Website.csproj
+++ b/E-commerce-Website.csproj
@@ -13,6 +13,7 @@
          <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.16" />
          <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
          <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+         <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.2" />
 		</ItemGroup>
         <ItemGroup>
           <Folder Include="wwwroot\admin_image\" />
